[FIX] documents: prevent document layout shift on hover
Steps to reproduce:
1. remove the owner of a document.
2. add tags to that document.
3. hovering on it will move other documents slightly.

Technical Reason:
Before hover, the elements are set to display: 'none', which triggers layout
recalculations and reflows in the browser when the elements are added or
removed from the rendering tree on hover.

After this commit:
No layout shifting to documents on hover.

Task-4442559

closes odoo/enterprise#76507

--- a/documents/static/src/scss/documents_kanban_view.scss
+++ b/documents/static/src/scss/documents_kanban_view.scss
@@ -172,7 +172,7 @@
             @include media-breakpoint-up(lg) {
                 &.o_documents_pre_18_1:not(:hover) {
                     .fa-eye-slash,.fa-star-o,.o_field_kanban_activity:has(.fa-clock-o) {
-                        display: none;
+                        visibility: hidden;
                     }
                 }
             }
